= Version History =
1.2 (2013-05-06):
- added: custom subject for group discussion replies
- fixed: blog notification not handled as of Elgg 1.8.14
- fixed: using new cache functions

1.1.1 (2013-04-05):

- fixed: wrong default message body
- fixed: limit issues with the new activity tabs
- fixed: bug with notify => site not working in some cases
- changed: moved plugin hook functions to own file 

1.1 (2012-12-20):

- added: optional replace site notifications with a personalized river view

1.0 (2012-12-11):

- first release