@@ -7,8 +7,10 @@
 		'advanced_notifications:settings:replace_site_notifications' => "Do you wish to replace system notifications, that normally end up in the messages plugin, with a personalized activity page (based on notifications settings)?",
 		
 		'advanced_notifications:activity:groups' => "My Groups",
-		'advanced_notifications:activity:groups:info' => "Activity in groups i am member of",
+		'advanced_notifications:activity:groups:title' => "Activity in my groups",
+		'advanced_notifications:activity:groups:info' => "Activity in groups I'm member of",
 		'advanced_notifications:activity:notifications' => "Personalized",
+		'advanced_notifications:activity:notifications:title' => "Personalized activity",
 		'advanced_notifications:activity:notifications:info' => "Activity based on my notification settings",
 		
 		'advanced_notifications:discussion:reply:subject' => "New group discussion reply",
