@@ -4,8 +4,10 @@ $language = array (
   'advanced_notifications:cli:error:type' => 'Opgegeven type is niet geldig',
   'advanced_notifications:settings:replace_site_notifications' => 'Wilt u de systeem notificaties, die normaal gesproken in de inbox verschijnen, vervangen door een gepersonaliseerde activiteiten pagina (gebaseerd op de notificatie instellingen)?',
   'advanced_notifications:activity:groups' => 'Mijn groepen',
+  'advanced_notifications:activity:groups:title' => 'Activiteit in mijn groepen',
   'advanced_notifications:activity:groups:info' => 'Activiteit in groepen waar ik lid van ben',
   'advanced_notifications:activity:notifications' => 'Gepersonaliseerd',
+  'advanced_notifications:activity:notifications:title' => 'Gepersonaliseerde activiteiten',
   'advanced_notifications:activity:notifications:info' => 'Activiteit gebaseerd op mijn notificatie instellingen',
   'advanced_notifications:discussion:reply:subject' => "Er is gereageerd op een discussie",
 );
