@@ -1,5 +1,11 @@
 = Version History =
+
+x.x:
+
+- changed: activity page titles now match document title
+
 1.2 (2013-05-06):
+
 - added: custom subject for group discussion replies
 - fixed: blog notification not handled as of Elgg 1.8.14
 - fixed: using new cache functions
